--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"scripts": {
 		"start": "npm run compile -- --watch",
 		"test": "eslint --cache --ext .js --ext .jsx *.js views && echo ✓",
-		"compile": "faucet --no-fingerprint --compact"
+		"compile": "faucet --compact"
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"complate-stream": "^0.14.1",
-		"eslint-config-fnd-jsx": "^1.1.0",
-		"faucet-pipeline-jsx": "^0.11.0"
+		"complate-stream": "^0.16.3",
+		"eslint-config-fnd-jsx": "^1.3.0",
+		"faucet-pipeline-jsx": "~1.0.0-beta.1"
 	}
 }
