--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"complate-stream": "^0.16.3",
-		"eslint-config-fnd-jsx": "^1.3.0",
-		"faucet-pipeline-jsx": "~1.0.0-beta.1"
+		"complate-stream": "^0.16.5",
+		"eslint-config-fnd-jsx": "^1.6.0",
+		"faucet-pipeline-jsx": "^1.1.1"
 	}
 }
